# ising

./: Cargo.toml  README.md
assets/: cassette.tape
src/: app.rs  braille.rs  ising.rs  main.rs  parameter.rs  ui.rs  vector.rs
